Add OCR functionality and update services
- Introduced Tesseract.js for OCR in openaiService to extract text from screenshots.
- Updated index.js to orchestrate OCR and text analysis, replacing the previous screenshot analysis.
- Enhanced error handling in the handler for better debugging.
- Added new emoji for OCR in the Telegram notifications.
- Updated package.json and pnpm-lock.yaml to include tesseract.js dependency.

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.4.7",
     "openai": "^4.92.1",
     "playwright": "^1.51.1",
-    "playwright-aws-lambda": "^0.11.0"
+    "playwright-aws-lambda": "^0.11.0",
+    "tesseract.js": "^6.0.1"
   }
 }
